exports[`Collection component should match the previous snapshot 1`] = `
<div>
   
  <div
    className="dLMdGK">
    <span>
      <h3 />
      <button
        onClick={[Function]}>
        Delete
      </button>
      <hr />
    </span>
    <div>
       
      <div
        className="DFkvH">
        <ul
          className="list-group">
          <li
            className="list-group-item">
            <h4
              className="list-group-item-heading">
              www.foo.no
            </h4>
            <p
              className="list-group-item-text">
              request.url
            </p>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collections component should match the previous snapshot 1`] = `
<div
  className="panel panel-default"
  id={undefined}>
  <div
    className="panel-heading">
    <span
      className="clearfix pull-right">
      <button
        onClick={[Function]}>
        Add new collection
      </button>
    </span>
  </div>
  <div
    className="panel-body">
    <span>
      <div>
         
        <div
          className="dLMdGK">
          <span>
            <h3>
              Collection
            </h3>
            <button
              onClick={[Function]}>
              Delete
            </button>
            <hr />
          </span>
          <div>
             
            <div
              className="DFkvH">
              <ul
                className="list-group">
                <li
                  className="list-group-item">
                  <h4
                    className="list-group-item-heading">
                    www.foo.no
                  </h4>
                  <p
                    className="list-group-item-text">
                    request.url
                  </p>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div>
         
        <div
          className="dLMdGK">
          <span>
            <h3>
              Collection 2
            </h3>
            <button
              onClick={[Function]}>
              Delete
            </button>
            <hr />
          </span>
          <div>
             
            <div
              className="DFkvH">
              <ul
                className="list-group">
                <li
                  className="list-group-item">
                  <h4
                    className="list-group-item-heading">
                    www.foo.no
                  </h4>
                  <p
                    className="list-group-item-text">
                    request.url
                  </p>
                </li>
              </ul>
            </div>
          </div>
          <div>
             
            <div
              className="DFkvH">
              <ul
                className="list-group">
                <li
                  className="list-group-item">
                  <h4
                    className="list-group-item-heading">
                    www.bar.no
                  </h4>
                  <p
                    className="list-group-item-text">
                    request.url
                  </p>
                </li>
              </ul>
            </div>
          </div>
          <div>
             
            <div
              className="DFkvH">
              <ul
                className="list-group">
                <li
                  className="list-group-item">
                  <h4
                    className="list-group-item-heading">
                    www.baz.no
                  </h4>
                  <p
                    className="list-group-item-text">
                    request.url
                  </p>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;
